--- a/style.css
+++ b/style.css
@@ -29,41 +29,41 @@
 }
 
 .todo-app h2 img {
-    width: 30px;
+    width: 20px; 
     margin-left: 10px;
 }
 
 .row {
     display: flex;
-    flex-direction: column; /* Adjusted for responsiveness */
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: #edeef0;
     border-radius: 30px;
-    padding: 20px; /* Adjusted for responsiveness */
+    padding: 20px;
     margin-bottom: 25px;
 }
 
 input {
-    width: 100%; /* Adjusted for responsiveness */
+    width: 100%; 
     border: none;
     outline: none;
     background: transparent;
     padding: 10px;
-    font-size: 14px; /* Corrected property name */
+    font-size: 14px;
 }
 
 button {
-    width: 100%; /* Adjusted for responsiveness */
+    width: 100%; 
     border: none;
     outline: none;
-    padding: 16px 0; /* Adjusted for responsiveness */
+    padding: 16px 0; 
     background: #ff5945;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
     border-radius: 40px;
-    margin-top: 10px; /* Adjusted for responsiveness */
+    margin-top: 10px; 
 }
 
 ul li {
@@ -78,8 +78,8 @@ ul li {
 ul li::before {
     content: '';
     position: absolute;
-    height: 28px;
-    width: 28px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     background-image: url(unchecked.png);
     background-size: cover;
